--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate-production": "postgrator --config postgrator-production-config.js",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate-production",
     "deploy": "git push heroku master"
   },
   "keywords": [],
@@ -18,7 +20,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "postgrator": "^3.10.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
