--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "migrate": "postgrator --config postgrator-config.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "build": "webpack --progress --colors",
-    "start": "webpack-dev-server --progress --colors"
+    "build": "webpack --progress",
+    "start": "webpack-dev-server"
   },
   "engines": {
     "node": "10.15.3",
@@ -24,10 +24,11 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "pg": "^7.12.1",
     "knex": "^0.19.1",
     "morgan": "^1.9.1",
-    "postgrator": "^3.10.2"
+    "pg": "^7.12.1",
+    "postgrator": "^3.10.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
